# slash

./: .dockerignore  .env.example  .gitignore  DEEP_RESEARCH.md  Dockerfile  README.md  RESEARCH_CONTEXT.md  alembic.ini  docker-compose.local.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: main.py
docs/: ALGORITHM_V2.md  API.md  ARCHITECTURE.md  CLIENT_TRADING_PLATFORM_MATRIX.md  CONFIG.md  GLOBAL_STRATEGY_EVENT_TRADING_ROADMAP.md  OPERATIONS.md  PROJECT_DEEP_RESEARCH_BRIEF.md  README.md  RESEARCH_BRIEF_GPT.md  ROLLBACK.md  STAGE10_AGENT_MODULE_SHORTLIST.md  STAGE11_CLIENT_REPORT_SCHEMA.md  STAGE11_RISK_AND_ROLLBACK.md  STAGE11_TRADING_RUNBOOK.md  STAGE12_MODULE_CANDIDATES.md  STAGE5_HANDOFF.md  STAGE6_DEEP_RESEARCH_BRIEF.md  STAGE7_AGENT_ARCHITECTURE.md  STAGE7_AGENT_STACK_SCORECARD.md  STAGE7_PROVIDER_COMPARISON.md  STAGE7_SHADOW_RESULTS.md  TESTING_AND_ACCEPTANCE.md  TZ_RESEARCH_PLAN.md  TZ_STAGE10_11_12_ISSUES_AND_NUANCES.md  TZ_STAGE10_EVENT_REPLAY_100_EVENTS.md  TZ_STAGE10_STATUS.md  TZ_STAGE11_PRODUCTION_TRADING_SERVICE.md  TZ_STAGE12_MULTI_SOURCE_MULTI_VENUE_EXPANSION.md  TZ_STAGE13_AGENT_EVOLUTION_AND_SOURCE_EXPANSION.md  TZ_STAGE14B_TELEGRAM_DRYRUN.md  TZ_STAGE14_DRYRUN_SIMULATOR.md  TZ_STAGE15_SCORING_AND_OPTIMIZATION.md  TZ_STAGE16_SIGNAL_EXPANSION.md  TZ_STAGE17_STATUS.md  TZ_STAGE17_TAIL_EVENT_DETECTOR.md  TZ_STAGE18_EVENT_CANONICALIZATION_AND_STRUCTURAL_ARB.md  TZ_STAGE19_TELEGRAM_UX_AND_LOCALIZATION.md  TZ_STAGE5_HISTORICAL_BACKFILL_AND_VALIDATION.md  TZ_STAGE6_AGENT_DECISION_AND_PROFIT_VALIDATION.md  (+11 more)
scripts/: calibrate_v2_priors.py  (+20 more)
(+237 files in other folders)
