[project]
name = "prediction-market-scanner"
version = "0.1.0"
description = "Prediction Market Scanner MVP"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.2.0",
  "alembic>=1.13.2",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "redis>=5.0.7",
  "celery>=5.4.0",
  "httpx>=0.27.0",
  "aiogram>=3.10.0",
  "python-dateutil>=2.9.0",
  "rapidfuzz>=3.9.4",
  "structlog>=24.4.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
]
research = [
  "vectorbt>=0.26.0",
  "quantstats>=0.0.63",
  "mlflow>=2.16.0",
  "py-clob-client>=0.24.0",
  "great-expectations>=1.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
